homework-13-01-2024/arthur-manukyan/security-group.tf
resource "aws_security_group" "terraform_security_group" {
  name        = "terraform_security_group"
  description = "Security group for Terraform"
  vpc_id      = aws_vpc.terraform_vpc.id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "Terraform-SG"
  }
}
